--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -100,6 +100,7 @@ en:
         expiration_date: "Expiration date"
       practice:
         sound_filename: Sound
+        one_sec_a_day: "One second a day"
       practice_event:
         start: 'Date'
   practices:
@@ -245,6 +246,7 @@ en:
       continuous: "Do not wait between each practice technique."
       total_time: "Total practice time, taking into consideration the delay between techniques."
       sound_filename: "Choose a sound to hear between techniques."
+      one_sec_a_day: 'Checked if this is a "one second a day" training.'
     time_format: "%{hours}h %{minutes}m %{seconds}s"
   actions:
     share: "Share"
