--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -47,6 +47,7 @@ pt:
         name: Nome
         sound_filename: Som
         total_time: "Tempo Total"
+        one_sec_a_day: "Um segundo por dia"
       practice_event:
         date: Data
         practice: Prática
@@ -351,7 +352,8 @@ pt:
       description: "Uma descrição da sua prática."
       name: "Nome da sua prática."
       sound_filename: "Escolha um som para indicar a mudanza entre técnicas."
-      total_time: "Tempo total da prática,  considerando a espera entre técnicas."
+      total_time: "Tempo total da prática, considerando a espera entre técnicas."
+      one_sec_a_day: 'Selecionado se esta prática é um treinamento com a modalidade "Um segundo por dia".'
     time_format: "%{hours}h %{minutes}m %{seconds}s"
   practice_event:
     help:
