authorize one_sec_a_day by plan

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -421,3 +421,5 @@ en:
   practice_publications:
     not_owner_notice: "You can only publish and unpublish the practices you own."
     paid_account_notice: "You require a paid subscription to publish practices. %{upgrade_link}"
+  one_sec_a_day:
+    paid_account_notice: "One second a day trainings are reserved for paid subscription."
