--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -332,6 +332,7 @@ en:
       practice: "Practice @ home!"
       calendar: "Keep track of your practices!"
       list_title: "With Sádhana you can..."
+      button: "Tour"
     get_started:
       title: "Get Started Now!"
       text: "If you practice DeRose Method, or teach it professionally, sign up now and start organizing your practices!"
