--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -298,6 +298,7 @@ es:
       practices_calendar: "Llevá un calendario de prácticas"
       share: "Compartí practicas personalizadas a tus alumnos"
       techniques: "Seleccioná entre más de 2000 técnicas"
+      button: "Tour"
     get_started:
       button: "¡Comenzá ahora!"
       text: "¡Si practicás Método DeRose, o lo enseñás profesionalmente, registrate ahora y comenzá a organizar tus prácticas!"
