--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -298,6 +298,7 @@ pt:
       practices_calendar: "Mantenha um calendário de suas práticas!"
       share: "Compartilhe práticas personalizadas para seus alunos"
       techniques: "Selecione de entre mais de 2.000 técnicas"
+      button: "Tour"
     get_started:
       button: "Inicie agora!"
       text: "Se você pratica Método DeRose, ou ensiná-lo profissionalmente, cadastre-se agora e começe a organizar as suas práticas!"
