--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,12 +23,14 @@ en:
       signed_in: 'Signed in successfully.'
       signed_out: 'Signed out successfully.'
     passwords:
-      send_instructions: 'You will receive an email with instructions about how to reset your password in a few minutes.'
+      send_instructions: 'You will receive an email with instructions about how to reset your password.'
       updated: 'Your password was changed successfully. You are now signed in.'
     confirmations:
-      send_instructions: 'You will receive an email with instructions about how to confirm your account in a few minutes.'
+      send_instructions: 'You will receive an email with instructions about how to confirm your account.'
       confirmed: 'Your account was successfully confirmed. You are now signed in.'
     registrations:
+      user:
+        inactive_signed_up: 'You should receive an email with instructions about how to confirm your account.'
       signed_up: 'You have signed up successfully.'
       updated: 'You updated your account successfully.'
       destroyed: 'Bye! Your account was successfully cancelled. We hope to see you again soon.'
