--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -426,6 +426,7 @@ es:
       share: "Compartí con tus amigos!"
       share_on_facebook: "Recién practiqué usando esta herramienta. Probala!!"
       thank_you: "Gracias por practicar con Sádhana!"
+      sign_up: "Suscribite a una cuenta gratis para acceder a más prácticas"
     play_practice_technique:
       next_technique: "Próxima técnica"
       no_associated_techniques: "No hay técnicas asociadas"
