--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -426,6 +426,7 @@ pt:
       share: "Compartilhe com seus amigos!"
       share_on_facebook: "Eu pratiquei utilizando esta ferramenta. Confira!"
       thank_you: "Obrigado por usar o Sádhana!"
+      sign_up: "registre-se grátis para accesar a mais práticas"
     play_practice_technique:
       next_technique: "Próxima técnica"
       no_associated_techniques: "Não há técnicas associadas"
